Initial Commit - added courses and students to the database.

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "attendappContext": "Server=(localdb)\\mssqllocaldb;Database=attendappContext-0dbd6ac7-7f48-4189-ac47-346b2fe4e399;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
